chore: :truck: rename `fp.ts` to `generate_fp.ts` and update `deno.json`
- :truck: Renamed `scripts/fp.ts` to `scripts/generate_fp.ts` for better clarity
- :pencil2: Updated `deno.json` to reflect the new script name in the `generate:fp` task

--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
   "exports": "./mod.ts",
   "tasks": {
     "dev": "deno test --watch",
-    "generate:fp": "deno run --allow-read --allow-write --allow-net scripts/fp.ts"
+    "generate:fp": "deno run --allow-read --allow-write --allow-net scripts/generate_fp.ts"
   },
   "license": "MIT",
   "imports": {
